--- a/moses.html
+++ b/moses.html
@@ -1,1 +1,9 @@
- 
+<!DOCTYPE html>
+<html lang = "en">
+<head>
+    <title>HELLO!</title>
+</head>
+<body>
+<h1> THIS IS MOSES!!!</h1>
+</body>
+</html>
