--- a/hello.html
+++ b/hello.html
@@ -4,8 +4,8 @@
         <title>HELLO!</title>
     </head>
 <body>
-<h1> THIS IS MY WEBSITE!!!</h1>
+<h1 style = "color:blue"> THIS IS MY WEBSITE!!!</h1>
     Hello World!
-   <h2>  PLUS THIS IS A CHANGE FOR TESTING GIT PULL!!!!!</h2>
+   <h2> >  PLUS THIS IS A CHANGE FOR TESTING GIT PULL!!!!!</h2>
 </body>
 </html>
