moved style properties

--- a/hello.html
+++ b/hello.html
@@ -2,10 +2,15 @@
 <html lang = "en">
     <head>
         <title>HELLO!</title>
+        <style>
+            h1{
+                color:red;
+            }
+        </style>
     </head>
 <body>
 
-<h1 style = "color:blue"> THIS IS MY WEBSITE!!!???</h1>
+<h1> THIS IS MY WEBSITE!!!???</h1>
 
     Hello World!
    <h2> >  PLUS THIS IS A CHANGE FOR TESTING GIT PULL!!!!!</h2>
