--- a/hello.html
+++ b/hello.html
@@ -4,7 +4,7 @@
         <title>HELLO!</title>
         <style>
             h1{
-                color:red;
+                color:salmon;
             }
         </style>
     </head>
