--- a/hello.html
+++ b/hello.html
@@ -2,15 +2,11 @@
 <html lang = "en">
     <head>
         <title>HELLO!</title>
-        <style>
-            h1{
-                color:salmon;
-            }
-        </style>
+
     </head>
 <body>
 
-<h1> THIS IS MY WEBSITE!!!???</h1>
+<h1 style="color: tan"> THIS IS MY WEBSITE!!!???</h1>
 
     Hello World!
    <h2> >  PLUS THIS IS A CHANGE FOR TESTING GIT PULL!!!!!</h2>
